# chemflow

./: .gitignore  Dockerfile  README.md  eval_cfg.py  pyproject.toml  run.py  setup_env.sh  submit_job.sh
.github/workflows/: rename.yml
configs/: default.yaml
configs/callbacks/: callbacks.yaml
configs/cfg/: gap.yaml  logp.yaml  logp_qed.yaml  natoms.yaml  scaffold.yaml  uncond.yaml
configs/data/: data.yaml  geom.yaml  qm9.yaml  qm9_scaffold.yaml  qm9_scaffold_decoration.yaml  tmqm.yaml
configs/defaults/: core.yaml  geom.yaml  qm9.yaml  qm9_scaffold.yaml  qm9_scaffold_decoration.yaml
configs/embeddings/: geom.yaml  qm9.yaml
configs/heads/: heads.yaml
configs/integrator/: integrator.yaml
configs/logging/: wandb_logger.yaml
configs/model/: cross_attn_dit_finetune.yaml  dit.yaml  dit_qm9 copy.yaml  egnn.yaml  egnn_adjusted_qm9.yaml  egnn_qm9.yaml  egnn_qm9_rates.yaml  gvp.yaml  model.yaml  semla.yaml  semla_XL.yaml  semla_adamw.yaml  semla_baseline.yaml  semla_qm9.yaml  transformer.yaml  transformer_adjusted_qm9.yaml
configs/rl/: grpo.yaml
configs/schedule/: beta.yaml  cubic.yaml  fast_power.yaml  linear.yaml  smoothstep.yaml
configs/trainer/: trainer.yaml
data/raw/: train.csv
docs/: ddp_insertion_desync.md  representation_refactor_v3.md
eval_scripts/: eval_cfg.py  eval_full_metrics.py  eval_full_metrics_new.py  eval_logp_cfg.py  eval_logp_qed_cfg.py  eval_natoms_cfg.py  eval_natoms_general.py  generate_uncond.py  run_qm9_metrics.py
notebooks/: analyze_failed.ipynb  analyze_rl_trajectories.ipynb  check_join_mol_w_atoms.ipynb  check_mcs.ipynb  check_permute_subgraph.ipynb  check_poisson.ipynb  eval_full_metrics_new_analysis.ipynb  explore_trajectories.ipynb  geom.ipynb  sde_variance.ipynb  test_assignment.ipynb  test_kappa_sched.ipynb  testing.ipynb  traj_analysis.ipynb  utils.py  visualize_interpolation.ipynb  visualize_scaffold_interpolation.ipynb
rl/: DEPARTURES.md  README.md  STABILITY_FIXES.md  eval_pretrained_validity.py  grpo.py  rewards.py  run_grpo.py  run_grpo.sh  run_grpo_slurm.sh  sweep_grpo_unkillable.sh
rl/experiments/: __init__.py  compare_pretrained_rl_atoms.py
rl/experiments/natoms/: analyze_rl_trajectories.ipynb  compare_pretrained_rl_atoms.py
rl/experiments/shape/: generate_shape_grpo_samples.py  shape_reward_similarity.ipynb
rl/notes/: DEPARTURES.md  STABILITY_FIXES.md  VAR_FLOOR_MARGINALS_AND_GRADIENTS.md
rl/rewards/: common.py  diversity.py  prilocaine_topology.py
rl/scripts/: run_grpo.sh  run_grpo_slurm.sh  sweep_grpo_unkillable.sh
scripts/: cfg_results_to_latex.py  check_geom_fragments.py  compute_property_distributions.py  dump_insert_delete_trajectory_sdf.py  generate_smiles_files.py  interpolation_test.py  mcs_interpolation_test.py  migrate_geom_pkl_to_lmdb.py  predict.py  preprocess_geom.py  probability_hull.py  probability_hull_species.py  probability_hull_trajectory.py  render_generated_mols_pdf.py
src/chemflow/: losses.py  metrics.py  rdkit.py  repr.py  schedulers.py  utils.py
src/chemflow/model/: cfg.py  (+14 more)
src/external_code/: egnn.py  geom_drugs_preprocessing.py  gvp.py  muon.py  semla.py
submission_scripts/euler/: geom_semla_uncond.sh  qm9_semla_linear.sh  qm9_semla_natoms.sh  qm9_semla_natoms_extrapolatable.sh  qm9_semla_uncond.sh  qm9_semla_uncond_long.sh  run_cfg_eval.sh  run_eval_full_metrics.sh  submit_job.sh  tmqm_semla_uncond.sh
submission_scripts/rl/: run_grpo.sh  run_grpo_slurm.sh  sweep_grpo_unkillable.sh
tests/: test_assignment.py
(+78 files in other folders)
